@@ -6,9 +6,10 @@
         "js"    : false,
         "css"   : false,
         "html"  : false,
-        "img"   : false
+        "img"   : true
     },
-    "github_key"            : "ec1f2e74b35a361e10bc",
+    "github_key"            : "891c251b925e4e967fa9",
+    "github_secret"         : "afe9bed1e810c5dc44c4c2a953fc6efb1e5b0545",
     "dropbox_key"           : "0nd3ssnp5fp7tqs",
     "dropbox_chooser_key"   : "o7d6llji052vijk",
     "logs"                  : false,
