@@ -48,12 +48,16 @@
     };
     
     function authenticate(pCode, pCallBack) {
-        var lId             = Config.github_id,
+        var lId             = Config.github_key,
+            lSecret         = Config.github_secret,
             lEnv            = process.env,
             
-            lClientId       = lEnv.github_id || lId,
-            lClientSecret   = lEnv.github_secret;
-                
+            lClientId       = lEnv.github_key       || lId,
+            lClientSecret   = lEnv.github_secret    || lSecret;
+        
+        console.log(lClientId);
+        console.log(lClientSecret);
+        
         var data = qs.stringify({
             client_id       : lClientId,
             client_secret   : lClientSecret,
